--- a/server/views/nih-login.ejs
+++ b/server/views/nih-login.ejs
@@ -39,7 +39,7 @@
 <!-- Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <form action="<%= returnURL; %>">
+        <form action="<%= returnURL %>">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">Select a certificate</h1>
