lr filling subject then enter opens create lr modal
Signed-off-by: Peter Huang <peterhuang1113@gmail.com>

--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -21,7 +21,7 @@
       </mat-form-field>
     </div>
     <div class="flex align-middle">
-      <button mat-fab extended color="primary" (click)="openCreateLoadRequestModal()">
+      <button type="button" mat-fab extended color="primary" (click)="openCreateLoadRequestModal()">
         <mat-icon fontIcon="add"></mat-icon>
         Create Request
       </button>
