--- a/projects/ts-etl-ui/src/app/app.component.html
+++ b/projects/ts-etl-ui/src/app/app.component.html
@@ -11,10 +11,10 @@
     </ng-container>
   </span>
   <ng-container *ngIf="(userService.user$ | async) as user;  else logInTemplate">
-    <button mat-button [matMenuTriggerFor]="userMenu" id="userMenu">{{user.utsUser.username}}</button>
+    <button mat-button [matMenuTriggerFor]="userMenu" aria-label="user menu">{{user.utsUser.username}}</button>
   </ng-container>
   <mat-menu #userMenu="matMenu">
-    <button mat-menu-item (click)="userService.logOut()" id="logout">Log Out</button>
+    <button mat-menu-item (click)="userService.logOut()">Log Out</button>
   </mat-menu>
   <ng-template #logInTemplate>
     <button mat-raised-button>
