--- a/projects/ts-etl-ui/src/app/app.component.html
+++ b/projects/ts-etl-ui/src/app/app.component.html
@@ -20,7 +20,7 @@
     <button mat-raised-button>
       Sign Up
     </button>
-    <button mat-raised-button (click)="openLoginModal()" id="login">
+    <button mat-raised-button (click)="openLoginModal()">
       Log In
     </button>
   </ng-template>
