--- a/projects/ts-etl-ui/src/load-request/load-request.component.scss
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.scss
@@ -1,5 +1,3 @@
-#requestTimeRange, #creationTimeRange, #codeSystemSearch {
-  .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
-    height: 0.5rem;
-  }
+.mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
+  height: 0;
 }
