--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -66,7 +66,7 @@
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col">
               <mat-form-field appearance="outline" id="opRequestSeqFilterInput">
-                <input class="w-3/4" matInput formControlName="opRequestSeq"
+                <input matInput formControlName="opRequestSeq"
                        placeholder="Ex. 148" size="4" type="number">
               </mat-form-field>
             </div>
@@ -98,7 +98,7 @@
         <ng-container matColumnDef="requestSubject">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col">
-              <label for="subjectInput" class="m-2" mat-sort-header disableClear>Subject</label>
+              <label for="subjectFilterInput" class="m-2" mat-sort-header disableClear>Subject</label>
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
@@ -106,8 +106,8 @@
         <ng-container matColumnDef="requestSubject-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col">
-              <mat-form-field appearance="outline" id="subjectInput">
-                <input matInput class="w-40" formControlName="requestSubject"
+              <mat-form-field appearance="outline" id="subjectFilterInput">
+                <input matInput formControlName="requestSubject"
                        placeholder="subject...">
               </mat-form-field>
             </div>
@@ -117,7 +117,7 @@
         <ng-container matColumnDef="requestStatus">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col">
-              <label for="requestStatusSelect" class="m-2" mat-sort-header disableClear>Status</label>
+              <label for="requestStatusFilterSelect" class="m-2" mat-sort-header disableClear>Status</label>
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
@@ -125,7 +125,7 @@
         <ng-container matColumnDef="requestStatus-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col">
-              <mat-form-field appearance="outline" id="requestStatusSelect">
+              <mat-form-field appearance="outline" id="requestStatusFilterSelect">
                 <mat-select formControlName="requestStatus" multiple>
                   <ng-container *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">
                     <mat-option [value]="LOAD_REQUEST_STATUS">{{LOAD_REQUEST_STATUS}}</mat-option>
@@ -139,7 +139,7 @@
         <ng-container matColumnDef="requestType">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col">
-              <label for="requestTypeSelect" class="m-2" mat-sort-header disableClear>Request Type</label>
+              <label for="requestTypeFilterSelect" class="m-2" mat-sort-header disableClear>Request Type</label>
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestType}}</td>
@@ -147,7 +147,7 @@
         <ng-container matColumnDef="requestType-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col">
-              <mat-form-field appearance="outline" id="requestTypeSelect">
+              <mat-form-field appearance="outline" id="requestTypeFilterSelect">
                 <mat-select formControlName="requestType" multiple>
                   <ng-container *ngFor="let LOAD_REQUEST_TYPE of constantService.LOAD_REQUEST_TYPES">
                     <mat-option [value]="LOAD_REQUEST_TYPE">{{LOAD_REQUEST_TYPE}}</mat-option>
@@ -184,7 +184,7 @@
         <ng-container matColumnDef="requester">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col">
-              <label for="requesterInput" class="m-2" mat-sort-header disableClear>Requester</label>
+              <label for="requesterFilterInput" class="m-2" mat-sort-header disableClear>Requester</label>
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
@@ -192,8 +192,8 @@
         <ng-container matColumnDef="requester-search">
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col">
-              <mat-form-field appearance="outline" id="requesterInput">
-                <input matInput class="w-40" formControlName="requester" placeholder="requester...">
+              <mat-form-field appearance="outline" id="requesterFilterInput">
+                <input matInput formControlName="requester" placeholder="requester...">
               </mat-form-field>
             </div>
           </th>
