--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -53,8 +53,8 @@
         </ng-container>
 
         <ng-container matColumnDef="opRequestSeq">
-          <th mat-header-cell *matHeaderCellDef style="padding:0; width: 118px">
-            <label for="opRequestSeqFilterInput" class="flex flex-col m-2" mat-sort-header disableClear>
+          <th mat-header-cell *matHeaderCellDef>
+            <label for="opRequestSeqFilterInput" mat-sort-header disableClear>
               Request ID</label>
           </th>
           <td mat-cell *matCellDef="let row">
@@ -63,23 +63,22 @@
         </ng-container>
         <ng-container matColumnDef="opRequestSeq-search">
           <th mat-header-cell *matHeaderCellDef>
-            <mat-form-field appearance="outline" id="opRequestSeqFilterInput">
-              <input matInput formControlName="opRequestSeq"
-                     placeholder="Ex. 148" size="4" type="number">
+            <mat-form-field appearance="outline" id="opRequestSeqFilterInput" class="max-w-28">
+              <input matInput formControlName="opRequestSeq" placeholder="Req. ID" size="4" type="number">
             </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="codeSystemName">
-          <th mat-header-cell *matHeaderCellDef disableClear style="padding:0; width: 174px">
-            <label for="codeSystemSelect" class="flex flex-col m-2" mat-sort-header disableClear>
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <label for="codeSystemSelect" mat-sort-header disableClear>
               Code System Name</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
         </ng-container>
         <ng-container matColumnDef="codeSystemName-search">
           <th mat-header-cell *matHeaderCellDef>
-            <mat-form-field appearance="outline" id="codeSystemSelect">
+            <mat-form-field appearance="outline" id="codeSystemSelect" class="max-w-44">
               <mat-select formControlName="codeSystemName" multiple>
                 <ng-container *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">
                   <mat-option [value]="CODE_SYSTEM_NAME">{{CODE_SYSTEM_NAME}}</mat-option>
@@ -91,7 +90,7 @@
 
         <ng-container matColumnDef="requestSubject">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="subjectFilterInput" class="flex flex-col m-2" mat-sort-header disableClear>Subject</label>
+            <label for="subjectFilterInput" mat-sort-header disableClear>Subject</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
         </ng-container>
@@ -99,7 +98,7 @@
           <th mat-header-cell *matHeaderCellDef>
             <mat-form-field appearance="outline" id="subjectFilterInput">
               <input matInput formControlName="requestSubject"
-                     placeholder="subject...">
+                     placeholder="Subject...">
             </mat-form-field>
           </th>
         </ng-container>
@@ -112,28 +111,26 @@
         </ng-container>
         <ng-container matColumnDef="requestStatus-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col">
-              <mat-form-field appearance="outline" id="requestStatusFilterSelect">
-                <mat-select formControlName="requestStatus" multiple>
-                  <ng-container *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">
-                    <mat-option [value]="LOAD_REQUEST_STATUS">{{LOAD_REQUEST_STATUS}}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </mat-form-field>
-            </div>
+            <mat-form-field appearance="outline" id="requestStatusFilterSelect" class="max-w-44">
+              <mat-select formControlName="requestStatus" multiple>
+                <ng-container *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">
+                  <mat-option [value]="LOAD_REQUEST_STATUS">{{LOAD_REQUEST_STATUS}}</mat-option>
+                </ng-container>
+              </mat-select>
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="requestType">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="requestTypeFilterSelect" class="flex flex-col m-2" mat-sort-header disableClear>
+            <label for="requestTypeFilterSelect" mat-sort-header disableClear>
               Request Type</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestType}}</td>
         </ng-container>
         <ng-container matColumnDef="requestType-search">
           <th mat-header-cell *matHeaderCellDef>
-            <mat-form-field appearance="outline" id="requestTypeFilterSelect">
+            <mat-form-field appearance="outline" id="requestTypeFilterSelect" class="max-w-40">
               <mat-select formControlName="requestType" multiple>
                 <ng-container *ngFor="let LOAD_REQUEST_TYPE of constantService.LOAD_REQUEST_TYPES">
                   <mat-option [value]="LOAD_REQUEST_TYPE">{{LOAD_REQUEST_TYPE}}</mat-option>
@@ -173,7 +170,7 @@
         <ng-container matColumnDef="requester-search">
           <th mat-header-cell *matHeaderCellDef>
             <mat-form-field appearance="outline" id="requesterFilterInput">
-              <input matInput formControlName="requester" placeholder="requester...">
+              <input matInput formControlName="requester" placeholder="Requester...">
             </mat-form-field>
           </th>
         </ng-container>
