--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -163,7 +163,7 @@
 
         <ng-container matColumnDef="requester">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <label for="requesterFilterInput" class="flex flex-col m-2" mat-sort-header disableClear>Requester</label>
+            <label for="requesterFilterInput" mat-sort-header disableClear>Requester</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
         </ng-container>
