use mat input for load request table filter (#407)
* use mat input for load request table filter

* fix styling

* fix GHA job

* fix style

* fixed

* revert

* fix

* fix tests

* done

* fix test

--- a/projects/ts-etl-ui/src/load-request/load-request.component.scss
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.scss
@@ -1,5 +1,12 @@
-#requestTimeRange, #creationTimeRange, #codeSystemSearch {
+#opRequestSeqFilterInput,
+#codeSystemSelect,
+#subjectFilterInput,
+#requestStatusFilterSelect,
+#requestTypeFilterSelect,
+#requestTimeRange,
+#creationTimeRange,
+#requesterFilterInput {
   .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
-    height: 0.5rem;
+    display: none;
   }
 }
