--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -30,7 +30,7 @@
 
   <div class="mat-elevation-z8 ">
     <div class="example-table-container">
-      <table mat-table [dataSource]="data()" class="example-table"
+      <table mat-table [dataSource]="data()" class="example-table compact"
              matSort [matSortActive]="currentLoadRequestSearchCriteria.sortCriteria.sortBy" matSortDisableClear
              [matSortDirection]="currentLoadRequestSearchCriteria.sortCriteria.sortDirection"
              (matSortChange)="handleSortEvent($event)">
@@ -53,10 +53,9 @@
         </ng-container>
 
         <ng-container matColumnDef="opRequestSeq">
-          <th mat-header-cell *matHeaderCellDef style="padding:0; width: 118px">
-            <div class="flex flex-col m-2">
-              <label for="opRequestSeqFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
-            </div>
+          <th mat-header-cell *matHeaderCellDef>
+            <label for="opRequestSeqFilterInput" mat-sort-header disableClear>
+              Request ID</label>
           </th>
           <td mat-cell *matCellDef="let row">
             <a [routerLink]="['/load-request', row.opRequestSeq]">{{row.opRequestSeq}}</a>
@@ -64,111 +63,93 @@
         </ng-container>
         <ng-container matColumnDef="opRequestSeq-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <input id="opRequestSeqFilterInput" class="w-3/4" matInput formControlName="opRequestSeq"
-                     placeholder="Ex. 148" size="4" type="number">
-            </div>
+            <mat-form-field appearance="outline" id="opRequestSeqFilterInput" class="max-w-28">
+              <input matInput formControlName="opRequestSeq" placeholder="Req. ID" size="4" type="number">
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="codeSystemName">
-          <th mat-header-cell *matHeaderCellDef disableClear style="padding:0; width: 174px">
-            <div class="flex flex-col m-2">
-              <label for="codeSystemSelect" class="m-2" mat-sort-header disableClear>Code System Name</label>
-            </div>
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <label for="codeSystemSelect" mat-sort-header disableClear>
+              Code System Name</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
         </ng-container>
         <ng-container matColumnDef="codeSystemName-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <mat-form-field appearance="outline" id="codeSystemSelect">
-                <mat-label>Code System Name</mat-label>
-                <mat-select formControlName="codeSystemName" multiple>
-                  <ng-container *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">
-                    <mat-option [value]="CODE_SYSTEM_NAME">{{CODE_SYSTEM_NAME}}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </mat-form-field>
-            </div>
+            <mat-form-field appearance="outline" id="codeSystemSelect" class="max-w-44">
+              <mat-select formControlName="codeSystemName" multiple>
+                <ng-container *ngFor="let CODE_SYSTEM_NAME of constantService.CODE_SYSTEM_NAMES">
+                  <mat-option [value]="CODE_SYSTEM_NAME">{{CODE_SYSTEM_NAME}}</mat-option>
+                </ng-container>
+              </mat-select>
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="requestSubject">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="subjectInput" class="m-2" mat-sort-header disableClear>Subject</label>
-            </div>
+            <label for="subjectFilterInput" mat-sort-header disableClear>Subject</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
         </ng-container>
         <ng-container matColumnDef="requestSubject-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <input id="subjectInput" matInput class="w-40" formControlName="requestSubject" placeholder="subject...">
-            </div>
+            <mat-form-field appearance="outline" id="subjectFilterInput">
+              <input matInput formControlName="requestSubject"
+                     placeholder="Subject...">
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="requestStatus">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="requestStatusSelect" class="m-2" mat-sort-header disableClear>Status</label>
-            </div>
+            <label for="requestStatusFilterSelect" class="flex flex-col m-2" mat-sort-header disableClear>Status</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
         <ng-container matColumnDef="requestStatus-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <mat-form-field appearance="outline" id="requestStatusSelect">
-                <mat-label>Request Status</mat-label>
-                <mat-select formControlName="requestStatus" multiple>
-                  <ng-container *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">
-                    <mat-option [value]="LOAD_REQUEST_STATUS">{{LOAD_REQUEST_STATUS}}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </mat-form-field>
-            </div>
+            <mat-form-field appearance="outline" id="requestStatusFilterSelect" class="max-w-44">
+              <mat-select formControlName="requestStatus" multiple>
+                <ng-container *ngFor="let LOAD_REQUEST_STATUS of constantService.LOAD_REQUEST_STATUSES">
+                  <mat-option [value]="LOAD_REQUEST_STATUS">{{LOAD_REQUEST_STATUS}}</mat-option>
+                </ng-container>
+              </mat-select>
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="requestType">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="requestTypeSelect" class="m-2" mat-sort-header disableClear>Request Type</label>
-            </div>
+            <label for="requestTypeFilterSelect" mat-sort-header disableClear>
+              Request Type</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestType}}</td>
         </ng-container>
         <ng-container matColumnDef="requestType-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <mat-form-field appearance="outline" id="requestTypeSelect">
-                <mat-label>Request Type</mat-label>
-                <mat-select formControlName="requestType" multiple>
-                  <ng-container *ngFor="let LOAD_REQUEST_TYPE of constantService.LOAD_REQUEST_TYPES">
-                    <mat-option [value]="LOAD_REQUEST_TYPE">{{LOAD_REQUEST_TYPE}}</mat-option>
-                  </ng-container>
-                </mat-select>
-              </mat-form-field>
-            </div>
+            <mat-form-field appearance="outline" id="requestTypeFilterSelect" class="max-w-40">
+              <mat-select formControlName="requestType" multiple>
+                <ng-container *ngFor="let LOAD_REQUEST_TYPE of constantService.LOAD_REQUEST_TYPES">
+                  <mat-option [value]="LOAD_REQUEST_TYPE">{{LOAD_REQUEST_TYPE}}</mat-option>
+                </ng-container>
+              </mat-select>
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="requestTimeRange" class="m-2" mat-sort-header disableClear>Request Time</label>
-            </div>
+            <label for="requestTimeRange" class="flex flex-col m-2" mat-sort-header disableClear>Request Time</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestTime.replace(' ', '') | easternTime }}</td>
         </ng-container>
         <ng-container matColumnDef="requestTime-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="mt-2">
+            <div class="flex flex-col">
               <mat-form-field appearance="outline" id="requestTimeRange">
-                <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]="requestRangePicker">
                   <input matStartDate formControlName="requestTimeFrom" placeholder="Start date">
                   <input matEndDate formControlName="requestTimeTo" placeholder="End date">
@@ -182,41 +163,34 @@
 
         <ng-container matColumnDef="requester">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="requesterInput" class="m-2" mat-sort-header disableClear>Requester</label>
-            </div>
+            <label for="requesterFilterInput" mat-sort-header disableClear>Requester</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
         </ng-container>
         <ng-container matColumnDef="requester-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="flex flex-col m-2">
-              <input id="requesterInput" matInput class="w-40" formControlName="requester" placeholder="requester...">
-            </div>
+            <mat-form-field appearance="outline" id="requesterFilterInput">
+              <input matInput formControlName="requester" placeholder="Requester...">
+            </mat-form-field>
           </th>
         </ng-container>
 
         <ng-container matColumnDef="creationTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
-            <div class="flex flex-col m-2">
-              <label for="creationTimeRange" class="m-2" mat-sort-header disableClear>Creation Time</label>
-            </div>
+            <label for="creationTimeRange" class="flex flex-col m-2" mat-sort-header disableClear>Creation Time</label>
           </th>
           <td mat-cell *matCellDef="let row">{{row.creationTime | easternTime}}</td>
         </ng-container>
         <ng-container matColumnDef="creationTime-search">
           <th mat-header-cell *matHeaderCellDef>
-            <div class="mt-2">
-              <mat-form-field appearance="outline" id="creationTimeRange">
-                <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [rangePicker]="createRangePicker">
-                  <input matStartDate formControlName="creationTimeFrom" placeholder="Start date">
-                  <input matEndDate formControlName="creationTimeTo" placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matIconSuffix [for]="createRangePicker"></mat-datepicker-toggle>
-                <mat-date-range-picker #createRangePicker></mat-date-range-picker>
-              </mat-form-field>
-            </div>
+            <mat-form-field appearance="outline" id="creationTimeRange">
+              <mat-date-range-input [rangePicker]="createRangePicker">
+                <input matStartDate formControlName="creationTimeFrom" placeholder="Start date">
+                <input matEndDate formControlName="creationTimeTo" placeholder="End date">
+              </mat-date-range-input>
+              <mat-datepicker-toggle matIconSuffix [for]="createRangePicker"></mat-datepicker-toggle>
+              <mat-date-range-picker #createRangePicker></mat-date-range-picker>
+            </mat-form-field>
           </th>
         </ng-container>
 
