--- a/projects/ts-etl-ui/src/material-theme.scss
+++ b/projects/ts-etl-ui/src/material-theme.scss
@@ -7,6 +7,27 @@
 $my-primary: mat.define-palette(mat.$indigo-palette, 500);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
+$my-compact-typography-level: mat.define-typography-level(
+        $font-size: 14px,
+        $line-height: 16px,
+        $font-weight: 300,
+        $letter-spacing: -0.05em
+);
+
+$my-compact-typography: mat.define-typography-config(
+        $body-2: $my-compact-typography-level,
+);
+
+$my-compact-theme: mat.define-light-theme((
+        color: (
+                primary: $my-primary,
+                accent: $my-accent,
+        ),
+        typography: $my-compact-typography,
+  // this value is set to -10 just to get the minimal value.
+        density: -10,
+));
+
 $my-theme: mat.define-light-theme((
         color: (
                 primary: $my-primary,
@@ -16,6 +37,10 @@ $my-theme: mat.define-light-theme((
   // this value is set to -10 just to get the minimal value.
         density: -10,
 ));
-
 @include mat.all-component-themes($my-theme);
+.compact {
+  @include mat.all-component-themes($my-compact-theme);
+}
+
 @include mat.strong-focus-indicators-theme(blue);
+
