--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -35,7 +35,7 @@
                   [cdkCopyToClipboard]="'file://nlmsambaserver.nlm.nih.gov/dev-ts-data-import/'"
         >content_copy
         </mat-icon>
-        <mat-hint>Copy and paste source file path from File Explorer</mat-hint>
+        <mat-hint>Copy and paste source file path here. It must be in the form of file://path/to/folder</mat-hint>
         <mat-error *ngIf="loadRequestCreationForm.get('sourceFilePath')?.hasError('sourceFilePathError')">
           Please select source file from NLM server
         </mat-error>
