http error intercept and show generic error

--- a/projects/ts-etl-ui/src/material-theme.scss
+++ b/projects/ts-etl-ui/src/material-theme.scss
@@ -1,6 +1,8 @@
 // Setup Theme
 @use '@angular/material' as mat;
 
+mat.$theme-ignore-duplication-warnings: true;
+
 @include mat.core();
 @include mat.strong-focus-indicators();
 
