--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -31,7 +31,7 @@
                 {{element.value | easternTime:'hh:mm:ss'}}
               </ng-container>
               <section *ngSwitchCase="'messageList'" class="message-table">
-                <table mat-table [dataSource]="element.value">
+                <table *ngIf="element.value?.length" mat-table [dataSource]="element.value">
                   <ng-container matColumnDef="type">
                     <th mat-header-cell *matHeaderCellDef> Type </th>
                     <td mat-cell *matCellDef="let row"> {{row.messageType}} </td>
